@@ -1579,20 +1579,22 @@ REF_STATUS ref_migrate_to_balance(REF_GRID ref_grid) {
 
   RSS(ref_node_synchronize_globals(ref_node), "sync global nodes");
   RSS(ref_node_collect_ghost_age(ref_node), "collect ghost age");
-
-  /* heuristic to reduce the number of active cores when over decomposed */
-  max_age = 0;
-  each_ref_node_valid_node(ref_node, node) {
-    max_age = MAX(max_age, ref_node_age(ref_node, node));
+  if (ref_grid_partitioner_full(ref_grid)) {
+    npart = ref_mpi_n(ref_mpi);
+  } else {
+    /* heuristic to reduce the number of active cores when over decomposed */
+    max_age = 0;
+    each_ref_node_valid_node(ref_node, node) {
+      max_age = MAX(max_age, ref_node_age(ref_node, node));
+    }
+    age = max_age;
+    RSS(ref_mpi_max(ref_mpi, &age, &max_age, REF_INT_TYPE), "mpi max");
+    RSS(ref_mpi_bcast(ref_mpi, &max_age, 1, REF_INT_TYPE), "min");
+    node_per_core = MAX(1000, 10 * max_age);
+    heuristic = MAX(
+        1, (REF_INT)(ref_node_n_global(ref_node) / (REF_GLOB)node_per_core));
+    npart = MIN(ref_mpi_n(ref_mpi), heuristic);
   }
-  age = max_age;
-  RSS(ref_mpi_max(ref_mpi, &age, &max_age, REF_INT_TYPE), "mpi max");
-  RSS(ref_mpi_bcast(ref_mpi, &max_age, 1, REF_INT_TYPE), "min");
-  node_per_core = MAX(1000, 10 * max_age);
-  heuristic =
-      MAX(1, (REF_INT)(ref_node_n_global(ref_node) / (REF_GLOB)node_per_core));
-
-  npart = MIN(ref_mpi_n(ref_mpi), heuristic);
 
   ref_malloc_init(node_part, ref_node_max(ref_node), REF_INT, REF_EMPTY);
 
