@@ -149,9 +149,6 @@ robustness and metric conformity
   optimized 4th tet node placement
 
 partitioning
- + heuristic of MAX(1000,maxage*10) vertex per core
- + allow npart sperate from ref_mpi_n for all parts
- + native RCB always chooses widest
  mature native RCB to default
  diffusion
  configure with metis only, when parmetis not provided
@@ -232,6 +229,11 @@ ooooooooooooooooo
 
 
 +++++++++++++++++
+
++ partitioning
+ + heuristic of MAX(1000,maxage*10) vertex per core
+ + allow npart sperate from ref_mpi_n for all parts
+ + native RCB always chooses widest
 
 + rename blend to facelift
 
